// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createBearerRefreshHandler > capturedJkt (DPoP binding) > accepts refresh when new token has same cnf.jkt 1`] = `
{
  "claims": {
    "confirmation": {
      "thumbprint": "jkt-abc",
    },
    "expiresAt": 2026-04-11T13:00:00.000Z,
    "subject": "alice",
  },
  "format": "jwt",
  "token": "new-jwt",
}
`;

exports[`createBearerRefreshHandler > swaps bearer, updates getExpiresAt from expiresIn, clears authExpiredEmittedAt on valid refresh 1`] = `
{
  "claims": {
    "expiresAt": 2026-04-11T13:30:00.000Z,
    "subject": "alice",
  },
  "format": "jwt",
  "token": "new-jwt",
}
`;
